www/css/fpp.css
/* ... */
[data-bs-theme="light"] input[type='range']::-webkit-slider-thumb {
	-webkit-appearance: none;
	box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.1);
	border-radius: 1.5em;
	border: 1px solid var(--fpp-border);
	background-color: #fff;
	border-radius: 50%;
	width: 35px;
	height: 35px;
	margin-top: -12.5px;
}


[data-bs-theme="light"] input[type='range']::-moz-range-thumb {
	-webkit-appearance: none;
	appearance: none;
	box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.1);
	border-radius: 1.5em;
	border: 1px solid var(--fpp-border);
	background-color: #fff;
	border-radius: 50%;
	width: 35px;
	height: 35px;
	margin-top: -12.5px;
}


[data-bs-theme="light"] input[type='range']::-ms-thumb {
	-webkit-appearance: none;
	appearance: none;
	box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.1);
	border-radius: 1.5em;
	border: 1px solid var(--fpp-border);
	background-color: #fff;
	border-radius: 50%;
	width: 35px;
	height: 35px;
	margin-top: -12.5px;
}


hr {
	border: 0px;
	border-style: solid;
	border-top: 1px solid var(--fpp-border);
}


body .sm-clean a .sub-arrow {
	right: 5px;
}


/* Remove borders around the browsers default color swatch,*/


input[type='color'] {
	-webkit-appearance: none;
	appearance: none;
	border: none;
	width: 5em;
	height: 2em;
	/*padding-left: 0 !important;*/
}


/*Chrome, Safari Opera */


input[type='color']::-webkit-color-swatch-wrapper {
	padding: 0;
}


input[type='color']::-webkit-color-swatch {
	border: none;
}


/*Firefox */


input[type='color']::-moz-color-swatch {
	border: none;
}


/* ============================= */
/* = Layout & Page Structure = */
/* ============================= */

.fppOuterContainer {
	max-width: 1800px;
	margin: auto;
	padding-left: 0;
	padding-right: 0;
	margin-top: -22px;
}


.fppMenuContainer {
	padding-bottom: 0;
}


.tab-content > .spinner-border {
	display: block;
	margin: auto;
}


.helpLinkDiv {
	text-align: right;
	padding: 0.5em;
}


.helpLinkDiv a {
	color: #8a8a8a;
	text-decoration: none;
	font-size: 0.8em;
}


.container {
	margin: auto;
	/* margin-left: 5%;
	margin-right: 5%; */
}


.row {
	display: flex;
}


.title {
	font-size: 2.3em;
	margin-bottom: 0.65em;
	font-weight: bold;
	color: #fff;
}


.settings .row {
	margin-bottom: 1.1em;
}


.fppMenuContainer {
	margin-top: -15px;
}


[data-bs-theme="light"] .pageContent {
	background: #fff;
	border-radius: 8px;
	color: #000;
	padding: 2.5em 3em;
	box-shadow: 5px 10100px 0px 10000px #20222e, -1000px 100px 0px 0px #20222e,
		1000px 100px 0px 0px #20222e;
}

.pageContent {
	border-radius: 8px;
	padding: 2.5em 3em;
}


.pageContent-tabs {
	padding-bottom: 0.85em;
	border-bottom: 1px solid var(--fpp-border);
	margin-bottom: 1em;
}


.pageContent-tabs > .nav-item {
	margin-top: 0;
}


[data-bs-theme="light"] body.has-touch .pageContent-tabs {
	overflow: auto;
	display: block;
	margin-right: -20px;

	background: linear-gradient(
			to left,
			rgba(255, 255, 255, 1),
			rgba(255, 255, 255, 1),
			rgba(255, 255, 255, 0) 1.5em
		),
		radial-gradient(
				farthest-side at 100% 50%,
				rgba(34, 34, 34, 0.5),
				rgba(255, 255, 255, 0)
			)
			100%;
	background-color: rgba(255, 255, 255, 1);
	background-repeat: no-repeat;
	background-attachment: local, scroll;
	background-size: 100% 100%, 0.75em 100%;
	min-height: 36px;
	/*height: 100%;*/
}


body.has-touch .pageContent-tabs > .nav-item:not(.hidden) {
	display: inline-block;
	margin-left: 1.5px;
	margin-right: 1.5px;
}


.pageContent .volumeControls .buttons {
	border-color: var(--fpp-border);
	border-radius: 29px;
	width: 62px;
	height: 46px;
}


.pageContent .disableButtons {
	background-color: rgba(0, 0, 0, 0.1);
	border-color: rgba(0, 0, 0, 0.1);
	color: rgba(0, 0, 0, 0.3);
}


.settings .playlistSelectRow {
	align-items: center;
	margin-bottom: 1.5em;
}


#controlsSection.container-fluid,
#controlsSection.container-fluid .row {
	padding-top: 0.1em;
	padding-left: 0;
	padding-right: 0;
	padding-bottom: 0.2em;
	margin: 0;
}


.fppScriptEntry > .row {
	margin-bottom: 0;
}


.playlistSelectHeader > .row {
	flex: 1;
}


.row.tablePageHeader {
	margin-bottom: 0;
	padding-top: 0.5em;
}


.row.tableTabPageHeader {
	margin-bottom: 0;
	padding-top: 0.5em;
}


.settingsGroupTable .row > :last-child:after {
	content: '';
	width: 0;
	height: 0;
	opacity: 0;
}


.settingsGroupTable .row.loading > :last-child:after {
	content: '';
	display: inline-block;
	color: var(--bs-danger);
	width: 22px;
	height: 22px;
	opacity: 1;
	vertical-align: middle;
	margin-left: 0.5em;
	border: 0.25em solid currentColor;
	border-right-color: transparent;
	border-radius: 50%;
	-webkit-animation: spinner-border 0.75s linear infinite;
	animation: spinner-border 0.75s linear infinite;
	transition: 0.3s opacity ease-out;
	transition-delay: 0.5s;
}


[data-bs-theme="light"] .pageContent .multiSelect {
	background: #fff;
	padding-right: 0.65rem;
}


.rowUniverseDetails .presetRow {
	display: flex;
	flex-wrap: wrap;
	gap: 2px; /* adds spacing between elements */
	margin-bottom: 2px;
}


.rowUniverseDetails .command-select,
.rowUniverseDetails .remove-row {
	flex: 1 1 auto;
	min-width: 120px;
}


/* ========================= */
/* = jQuery UI Overrides = */
/* ========================= */

.ui-tabs .ui-tabs-nav .ui-tabs-anchor {
	padding: 0.75em 1.5em;
}


.ui-state-default,
.ui-widget-content .ui-state-default,
.ui-widget-header .ui-state-default,
.ui-button,
html .ui-button.ui-state-disabled:hover,
html .ui-button.ui-state-disabled:active {
	background: none;
	border: none;
}


[data-bs-theme="light"] .ui-state-active,
[data-bs-theme="light"] .ui-widget-content .ui-state-active,
[data-bs-theme="light"] .ui-widget-header .ui-state-active,
[data-bs-theme="light"] a.ui-button:active,
[data-bs-theme="light"] .ui-button:active,
[data-bs-theme="light"] .ui-button.ui-state-active:hover {
	background: #fff;
}


.fppMinMaxSliderRange.ui-widget.ui-widget-content {
	border: 1px;
	border-style: solid;
	border-color: #c5c5c5;
}
/* ... */

